JavaFX Control Label Impelmented

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /JAVAFXSKELETON-JDK24/nbproject/private/
 /JAVAFXSKELETON-JDK24/build/
 /JAVAFXSKELETON-JDK24/dist/
+/JavaFx Control Label/nbproject/private/
+/JavaFx Control Label/build/
+/JavaFx Control Label/dist/
