--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /JavaFx Control Label/nbproject/private/
 /JavaFx Control Label/build/
 /JavaFx Control Label/dist/
+/EventHandlingandButton/nbproject/private/
+/EventHandlingandButton/build/
