--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /JavaFx Control Label/dist/
 /EventHandlingandButton/nbproject/private/
 /EventHandlingandButton/build/
+/CanvasJavaFX/nbproject/private/
+/CanvasJavaFX/build/
