--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /CanvasJavaFX/nbproject/private/
 /CanvasJavaFX/build/
 /Inheritance/nbproject/private/
+/UsingImageAndImageView/nbproject/private/
+/UsingImageAndImageView/build/
