--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /Inheritance/nbproject/private/
 /UsingImageAndImageView/nbproject/private/
 /UsingImageAndImageView/build/
+/AddingAnImageToALabel/nbproject/private/
+/AddingAnImageToALabel/build/
