--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /UsingImageAndImageView/build/
 /AddingAnImageToALabel/nbproject/private/
 /AddingAnImageToALabel/build/
+/AddingAnImageToALabel/dist/
