--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /AddingAnImageToALabel/nbproject/private/
 /AddingAnImageToALabel/build/
 /AddingAnImageToALabel/dist/
+/UsingAImageWithAButton/nbproject/private/
+/UsingAImageWithAButton/build/
