--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@
 /AddingAnImageToALabel/dist/
 /UsingAImageWithAButton/nbproject/private/
 /UsingAImageWithAButton/build/
+/LABS/nbproject/private/
+/LABS/build/
