--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,13 @@
 /UsingAImageWithAButton/build/
 /LABS/nbproject/private/
 /LABS/build/
+/LAB5/nbproject/private/
+/LAB06/nbproject/private/
+/LAB06/build/
+/LAB07/nbproject/private/
+/LAB07/build/
+/LAB7/nbproject/private/
+/LAB7/build/
+/LAB8/nbproject/private/
+/LAB8/build/
+/OOPCLASS-22-5-2025/nbproject/private/
