--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@
 /LAB8/nbproject/private/
 /LAB8/build/
 /OOPCLASS-22-5-2025/nbproject/private/
+/ToggleButtonJAVAFX/nbproject/private/
+/ToggleButtonJAVAFX/build/
+/RadioButtonJavaFx/nbproject/private/
