--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@
 /ToggleButtonJAVAFX/nbproject/private/
 /ToggleButtonJAVAFX/build/
 /RadioButtonJavaFx/nbproject/private/
+/RadioButtonJavaFx/build/
