--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@
 /ToggleButtonJAVAFX/build/
 /RadioButtonJavaFx/nbproject/private/
 /RadioButtonJavaFx/build/
+/AltenativeWaysToHandleRadioButton/nbproject/private/
+/AltenativeWaysToHandleRadioButton/build/
