--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@
 /RadioButtonJavaFx/build/
 /AltenativeWaysToHandleRadioButton/nbproject/private/
 /AltenativeWaysToHandleRadioButton/build/
+/CheckBoxJavaFx/nbproject/private/
+/CheckBoxJavaFx/build/
