--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@
 /CheckBoxJavaFx/nbproject/private/
 /CheckBoxJavaFx/build/
 /CheckBoxJavaFx/dist/
+/ListViewJavaFx/nbproject/private/
+/ListView/nbproject/private/
